--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   barcode_scan: any
-
+  firebase_analytics: ^5.0.2
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
